030-Hawkbit/030-Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hawkbit
  labels:
    app: hawkbit
    name: hawkbit
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "hawkbit:latest"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"hawkbit\")].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hawkbit
      name: hawkbit
  template:
    metadata:
      labels:
        app: hawkbit
        name: hawkbit
    spec:
      containers:
        - name: hawkbit
          image: hawkbit/hawkbit-update-server:0.3.0M5-mysql
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: management
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /VAADIN/themes/hawkbit/favicon.ico
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /VAADIN/themes/hawkbit/favicon.ico
              port: http  
            initialDelaySeconds: 60
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /opt/hawkbit/config
            - name: storage
              mountPath: /var/lib/hawkbit-storage
      volumes:
      - name: config
        configMap:
          name: hawkbit
      - name: storage
        persistentVolumeClaim:
          claimName: hawkbit-storage
