030-Hawkbit/030-DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: hawkbit
  labels:
    app: hawkbit
    name: hawkbit
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hawkbit
        name: hawkbit
    spec:
      containers:
        - name: hawkbit
          image: hawkbit
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: management
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /VAADIN/themes/hawkbit/favicon.ico
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /VAADIN/themes/hawkbit/favicon.ico
              port: http  
            initialDelaySeconds: 60
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /opt/hawkbit/config
            - name: storage
              mountPath: /var/lib/hawkbit-storage
      volumes:
      - name: config
        configMap:
          name: hawkbit
      - name: storage
        persistentVolumeClaim:
          claimName: hawkbit-storage
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - hawkbit
        from:
          kind: ImageStreamTag
          name: hawkbit:latest
