030-Hawkbit/040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hawkbit
  labels:
    app: hawkbit
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
  selector:
    app: hawkbit
    name: hawkbit
