030-Hawkbit/050-Service-loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hawkbit-lb
spec:
  type: LoadBalancer
  selector:
    app: hawkbit
    name: hawkbit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
