030-Hawkbit/050-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hawkbit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hawkbit
          servicePort: 80
