030-Hawkbit/050-Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hawkbit
  labels:
    app: hawkbit
spec:
  to:
    kind: Service
    name: hawkbit
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
